main/default/objects/Milestone_Metric__c/Milestone_Metric__c.object-meta.xml
<CustomObject>
    <description>Metrics used to calculate progress of each Milestone</description>
    <label>Milestone Metric</label>
    <nameField>
        <displayFormat>MM-{0000000}</displayFormat>
        <label>Milestone Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>