main/default/objects/Milestone_Metric__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <description>Links to Journey</description>
    <label>Journey</label>
    <referenceTo>Journey__c</referenceTo>
    <relationshipLabel>Milestone Metrics</relationshipLabel>
    <relationshipName>Milestone_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>