main/default/objects/Milestone_Metric__c/fields/Tracked_Field__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Field__c</fullName>
    <description>Indicates tracked field for metric calculation</description>
    <label>Tracked Field</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Invitation Date</fullName>
            </value>
            <value>
                <fullName>Registration Date</fullName>
            </value>
            <value>
                <fullName>Attendance Date</fullName>
            </value>
            <value>
                <fullName>Date Sent</fullName>
            </value>
            <value>
                <fullName>Date Responded</fullName>
            </value>
            <value>
                <fullName>Completion Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>